@@ -1,7 +1,12 @@
 package school.sptech.pessoa.service;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import school.sptech.pessoa.dto.MotoristaRequestDTO;
 import school.sptech.pessoa.dto.MotoristaResponseDTO;
 import school.sptech.pessoa.exception.BusinessException;
@@ -11,7 +16,7 @@ import school.sptech.pessoa.model.Motorista;
 import school.sptech.pessoa.repository.MotoristaRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 @Service
 @RequiredArgsConstructor
@@ -21,29 +26,31 @@ public class MotoristaService {
     private final MotoristaMapper motoristaMapper;
 
     public List<MotoristaResponseDTO> listarTodos() {
-        return motoristaRepository.findAll()
+        return motoristaRepository.findAllByAtivoTrue()
                 .stream()
                 .map(motoristaMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public MotoristaResponseDTO buscarPorId(Long id) {
         Motorista motorista = motoristaRepository.findById(id)
+                .filter(Motorista::getAtivo)
                 .orElseThrow(() -> new ResourceNotFoundException("Motorista não encontrado com id: " + id));
         return motoristaMapper.toResponseDTO(motorista);
     }
 
     public MotoristaResponseDTO buscarPorCpf(String cpf) {
-        Motorista motorista = motoristaRepository.findByCpf(cpf)
+        Motorista motorista = motoristaRepository.findByCpfAndAtivoTrue(cpf)
                 .orElseThrow(() -> new ResourceNotFoundException("Motorista não encontrado com CPF: " + cpf));
         return motoristaMapper.toResponseDTO(motorista);
     }
 
+    @Transactional
     public MotoristaResponseDTO criar(MotoristaRequestDTO dto) {
-        if (motoristaRepository.existsByCpf(dto.cpf())) {
+        if (motoristaRepository.existsByCpfAndAtivoTrue(dto.cpf())) {
             throw new BusinessException("Já existe um motorista com o CPF: " + dto.cpf());
         }
-        if (motoristaRepository.existsByNumeroCNH(dto.numeroCNH())) {
+        if (motoristaRepository.existsByNumeroCNHAndAtivoTrue(dto.numeroCNH())) {
             throw new BusinessException("Já existe um motorista com a CNH: " + dto.numeroCNH());
         }
 
@@ -51,14 +58,16 @@ public class MotoristaService {
         return motoristaMapper.toResponseDTO(motoristaRepository.save(motorista));
     }
 
+    @Transactional
     public MotoristaResponseDTO atualizar(Long id, MotoristaRequestDTO dto) {
         Motorista motorista = motoristaRepository.findById(id)
+                .filter(Motorista::getAtivo)
                 .orElseThrow(() -> new ResourceNotFoundException("Motorista não encontrado com id: " + id));
 
-        if (!motorista.getCpf().equals(dto.cpf()) && motoristaRepository.existsByCpf(dto.cpf())) {
+        if (!motorista.getCpf().equals(dto.cpf()) && motoristaRepository.existsByCpfAndAtivoTrue(dto.cpf())) {
             throw new BusinessException("Já existe um motorista com o CPF: " + dto.cpf());
         }
-        if (!motorista.getNumeroCNH().equals(dto.numeroCNH()) && motoristaRepository.existsByNumeroCNH(dto.numeroCNH())) {
+        if (!motorista.getNumeroCNH().equals(dto.numeroCNH()) && motoristaRepository.existsByNumeroCNHAndAtivoTrue(dto.numeroCNH())) {
             throw new BusinessException("Já existe um motorista com a CNH: " + dto.numeroCNH());
         }
 
@@ -66,10 +75,12 @@ public class MotoristaService {
         return motoristaMapper.toResponseDTO(motoristaRepository.save(motorista));
     }
 
+    @Transactional
     public void deletar(Long id) {
-        if (!motoristaRepository.existsById(id)) {
-            throw new ResourceNotFoundException("Motorista não encontrado com id: " + id);
-        }
-        motoristaRepository.deleteById(id);
+        Motorista motorista = motoristaRepository.findById(id)
+                .filter(Motorista::getAtivo)
+                .orElseThrow(() -> new ResourceNotFoundException("Motorista não encontrado com id: " + id));
+        motorista.setAtivo(false);
+        motoristaRepository.save(motorista);
     }
 }
